workshop3/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend2048
  namespace: YOUR_NAMESPACE
spec:
  ports:
  - name: frontend2048-service
    port: 8080
    protocol: TCP
    targetPort: 80
  type: ClusterIP
  selector:
    app: frontend2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend2048
  namespace: YOUR_NAMESPACE
  labels:
    app: frontend2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend2048
  template:
    metadata:
      labels:
        app: frontend2048
    spec:
      containers:
      - name: frontend2048
        image: asia-east1-docker.pkg.dev/pentitum-sre/workshop/frontend2048:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: frontend
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 2
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: "config"
          mountPath: "/usr/share/nginx/html/js/config.js"
          subPath: "config.js"
      volumes:
        - name: "config"
          configMap:
            name: "2048config"
